# picoCAD2ex

./: .gitignore  README.md  SCHEMA.md  pyproject.toml  settings.json  unnamed_2.txt
.agents/skills/picocad2-edit/: SKILL.md
.agents/skills/picocad2-manual/: SKILL.md
examples/: advanced_meshes.txt  livingroom.txt  pig.txt  pirate.txt  rig.txt  waterfall.txt
models/: chair.txt  football.txt  lolipop.txt
picocad/: __init__.py  model.py  palette.py  texture.py  uv.py
scripts/: __init__.py  gen_chick.py  gen_cube.py  gen_football.py
scripts/football_shoe/: gen_football_shoe_deepseek-v4-pro.py  gen_football_shoe_glm-5.2.py  gen_football_shoe_kimi-k2.7-code.py  gen_football_shoe_mimo-2.5-pro.py  gen_football_shoe_minimax-m3.py  gen_football_shoe_qwen-3.7-max.py  gen_football_shoe_qwen-3.7-plus.py
tests/: __init__.py  test_smoke.py
