[project]
name = "picocad2-scripts"
version = "0.1.0"
description = "Reusable toolkit + recipes for authoring picoCAD 2 model files (*.txt) by hand."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "opencode" }]
keywords = ["picocad", "picocad2", "lowpoly", "gamedev", "procedural"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
  "Operating System :: OS Independent",
]

# Runtime dependencies: stdlib only. Keep it that way so anyone with
# Python 3.12+ can drop the recipe scripts into a flat folder and run.
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8",
  "mypy>=1.13",
  "ruff>=0.7",
]

[project.urls]
Manual = "https://picocad.net/manual/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Flat layout: the package dir is `picocad/` (not `picocad2_scripts/`),
# so tell hatchling where to find it. `scripts/` and `tests/` are not
# packaged -- they are run in-place.
[tool.hatch.build.targets.wheel]
packages = ["picocad"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["models", "examples", "backups", ".picocad"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "C4",   # comprehensions
  "SIM",  # simplify
  "RUF",  # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
files = ["picocad", "scripts", "tests"]

[tool.pytest.ini_options]
# Project root is on sys.path so `import picocad` and `from scripts.gen_cube`
# both resolve via the installed package and the local `scripts/` package.
testpaths = ["tests"]